added an example job to the tutorial

--- a/Job2vec_Tutorial.ipynb
+++ b/Job2vec_Tutorial.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -70,48 +70,60 @@
      "text": [
       "\n",
       "Most similar jobs to \"professor\":\n",
-      "\tprofessor of history and theology\n",
-      "\tprofessor of biology\n",
-      "\tprofessorconsultant\n",
-      "\tprof emeritus\n",
-      "\tphysicianprofessor\n",
-      "\thistory prof\n",
-      "\trolfer\n",
-      "\tprof\n",
-      "\tvice provost\n",
-      "\tpt\n",
+      "\tprofessor of history and theology (80.5%)\n",
+      "\tprofessor of biology (80.5%)\n",
+      "\tprofessorconsultant (77.8%)\n",
+      "\tprof emeritus (76.0%)\n",
+      "\tphysicianprofessor (75.9%)\n",
+      "\thistory prof (75.5%)\n",
+      "\trolfer (75.1%)\n",
+      "\tprof (74.7%)\n",
+      "\tvice provost (74.3%)\n",
+      "\tpt (74.3%)\n",
       "\n",
       "Most similar jobs to \"history teacher\":\n",
-      "\thigh school teacher\n",
-      "\tteachers\n",
-      "\tteachet\n",
-      "\telementary school teacher\n",
-      "\tmontessori teacher\n",
-      "\tspecial ed teacher\n",
-      "\tpart time teacher\n",
-      "\tparttime teacher\n",
-      "\tspecial education teacher\n",
-      "\thigh school english teacher\n",
+      "\thigh school teacher (91.9%)\n",
+      "\tteachers (90.2%)\n",
+      "\tteachet (89.5%)\n",
+      "\telementary school teacher (89.4%)\n",
+      "\tmontessori teacher (89.2%)\n",
+      "\tspecial ed teacher (89.0%)\n",
+      "\tpart time teacher (89.0%)\n",
+      "\tparttime teacher (88.4%)\n",
+      "\tspecial education teacher (88.3%)\n",
+      "\thigh school english teacher (87.6%)\n",
       "\n",
       "Most similar jobs to \"retired nurse\":\n",
-      "\tretired lawyer\n",
-      "\tnot employed\n",
-      "\tretired rn\n",
-      "\tadvanced practice nurse\n",
-      "\tnursing\n",
-      "\tretirednot employed\n",
-      "\tarchitects\n",
-      "\trn care manager\n",
-      "\tfamily nurse practitioner\n",
-      "\tpublic health nurse\n"
+      "\tretired lawyer (86.7%)\n",
+      "\tnot employed (86.6%)\n",
+      "\tretired rn (85.7%)\n",
+      "\tadvanced practice nurse (85.7%)\n",
+      "\tnursing (85.7%)\n",
+      "\tretirednot employed (85.5%)\n",
+      "\tarchitects (85.4%)\n",
+      "\trn care manager (85.3%)\n",
+      "\tfamily nurse practitioner (85.3%)\n",
+      "\tpublic health nurse (85.2%)\n",
+      "\n",
+      "Most similar jobs to \"landscape architect\":\n",
+      "\tarchitecture (90.2%)\n",
+      "\tarchitectural designer (87.3%)\n",
+      "\tlandscape contractor (85.1%)\n",
+      "\tlandscape design (84.9%)\n",
+      "\tlandscape designer (84.9%)\n",
+      "\tsenior planner (84.6%)\n",
+      "\tlandscaper (84.6%)\n",
+      "\tarchitect (84.5%)\n",
+      "\tmedical interpreter (84.4%)\n",
+      "\tinstaller (83.8%)\n"
      ]
     }
    ],
    "source": [
-    "for start_job in ['professor', 'history teacher', 'retired nurse']:\n",
+    "for start_job in ['professor', 'history teacher', 'retired nurse', 'landscape architect']:\n",
     "    print(f'\\nMost similar jobs to \"{start_job}\":')\n",
     "    for job, similarity_score in job2vec.most_similar(positive=[start_job]):\n",
-    "        print(f'\\t{job}')"
+    "        print(f'\\t{job} ({round(100*similarity_score, 1)}%)')"
    ]
   },
   {
